--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,17 @@
   border: 0;
   color:#767474;
   background-color:#3a3a3a;
-
+font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+}
+a{
+  text-decoration: none !important;
 }
 body{
 
+}
+
+b, strong {
+    color: #d39e00;
 }
 /*+++++++++++++++++START fondo++++++++++++++++++++++++*/
 #canvas {
@@ -18,18 +25,28 @@ body{
 }
 #canvas-wrap { position:relative } /* Make this a positioned parent */
 .general{
-    position:absolute; 
+    /*position:absolute; */
     top:20px; 
     left:30px; 
 }
 /*+++++++++++++++++END fondo++++++++++++++++++++++++*/
+
+.nav_bar_mobile{
+  display: none;
+  position: fixed;
+  float:left;
+  width : 100%;
+  height : 4%;
+  background-color:#212121;
+}
+
 .nav_bar{
     position: fixed;
     float:left;
-    width : 4.5%;
+    width: 3%;
     height : 100%;
-  /*  background-color:#3d3d3d;
-    border :4px solid #373737;  */
+    background-color:#212121;
+  /*  border :4px solid #373737;  */
 }
 .nav{
     
@@ -37,15 +54,26 @@ body{
     display:block;
     height:55% ; 
     margin-top:30%;
+    background: none;
 }
 .navImg{
     width : 100%;
 }
+.navImg:hover{
+      background-color: #1e7e34;
+           transform: translateX(-3px);
+}
 
-.navBot :hover{
-    background-color: #02bd55;
+.navBot:hover{
+
     cursor: pointer;
 }
+
+.navBotActive{
+    background-color: #02bd55;
+}
+
+
 .pageContainer {
     position:relative;
     float:left;
@@ -55,6 +83,7 @@ body{
     margin-bottom:25%;
     left:5%;
 }
+
 .leftSpace, .rightSpace{
     position: relative;
     float:left;
@@ -63,14 +92,12 @@ body{
     margin-top:8%;
     margin-bottom:2%;    
     margin-left:3%;
-/*    border:1px;
-    border-style:solid;*/
 }
 .rightSpace{ 
     width: 54%;    
 }
 h1{
-   color:#08fd75;
+   color:#4af557a6;
    font-size: 50px;
    margin-bottom:5%;
 }
@@ -83,16 +110,40 @@ img{
     margin-left:0%;
 }
 .borderPhoto{
-    width: 35%;
+    width: 43%;
     margin-left:3%;
     margin-right:2%;
     margin-bottom:2%;
    
 }
-.photo{
-     width: 98%; background-color:#3d3d3d;
-    border :4px solid #08fd75;
+
+#filterColor{
+    background: #44e2e2;
+    position: absolute;
+    width: 42%;
+    display: block;
+    height: -webkit-fill-available;
+    z-index: 100;
+    opacity: .6;
 }
+
+
+.photo{
+    width: 98%; 
+    background-color:#3d3d3d;
+    border :4px solid #08fd75;
+    filter: grayscale(100%) blur(1px);
+    transform: translateX(55px);
+    transition: filter 1s;
+      transition: transform .5s;
+    border-radius: 2px;
+}
+.photo:hover{
+  box-shadow: 1px 1px 18px #000000cf;
+  transform: translateX(40px);
+  filter: grayscale(0%) blur(0px) ;
+}
+
 #portfolio h1{
 }
 .portSpace{
@@ -129,15 +180,18 @@ border :4px solid #08fd75;
 
 .imgCell{/*@@@*/
     float: left;
-    width: 45%;
+   /*col-12 col-md-6*/
     margin-right:2%;
     text-decoration:none;
-    background-color:#3d3d3d;
-    border :4px solid #08fd75;
+    background-color: #3d3d3d;
+    border: 4px solid #4af557a6;
     border-radius: 4px;
     margin-bottom:3%;
-    padding:1%;
+   /* padding:1%;*/
 }
+.imgCell:hover{
+  box-shadow: 1px 1px 18px #000000cf;
+}  
     .imgCell p{
         background-color:#3d3d3d;
     }
@@ -148,9 +202,11 @@ border :4px solid #08fd75;
         margin-bottom:3%;
     }
     .titulo{
+        margin-top: 2%;
         float: top;
         font-size: 30px;
         color: white;
+        text-transform: uppercase;
     }
     .descripcion{
         float: bottom;
@@ -160,7 +216,17 @@ border :4px solid #08fd75;
         float: bottom;
         font-style:italic;
         margin-top:2%;
-        margin-bottom:7%;
+        
+        color: #588ad6;
+    }
+    .plataform{
+      margin-top: 2%;
+      color: #757575;
+      font-weight: 100;
+      font-size: larger;
+    }
+    .descripcion,.leng,.plataform,.titulo{
+      margin-left: 2%;
     }
 .p2{
     color: #aaa;
@@ -213,47 +279,156 @@ input[type=submit]:hover {
   float: top;
   padding: 20px;
   padding-top:35px;
-  width: 40%;
+  min-width: 40%;
   height:100%;
   margin-left:25%;
+  margin-right: 25%;
   margin-top:14%;
   margin-bottom:20%;
   background-color:#3d3d3d;
   border :4px solid #08fd75;
-  /*background-color:#3d3d3d;
-  border :4px solid #373737;*/
   border-radius: 4px;  
 }
+
+.mailContainer:hover{
+  box-shadow: 1px 1px 18px #000000cf;
+}
+
 .mailContainer h1{
- margin-left:25%;
- margin-bottom:10%;
- background-color:#3d3d3d;
+  margin-bottom:10%;
+  background-color:#3d3d3d;
+  text-align: center;
 }
 .mailContainer .p2{
-background-color:#3d3d3d;
+  background-color:#3d3d3d;
 }
 
 .mailButton {
-    background-color: #08fd75;
+    background-color: #4af557a6;
     color: white;
-    padding: 12px 20px; 
-    
-    border-radius: 4px;  
-    width:30%;
-    margin-left:30%;
-     margin-top:15%;
+    padding: 12px 20px;
+    border-radius: 4px;
+    margin-top: 15%;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 300px;
+    text-align: center;
 }
 .mailButton:hover {
   background-color: #02bd55;
   cursor: pointer;
 }
 .mailLink{
-    text-align:center;
+text-align: center;
     background-color: rgba(19, 191, 95, 0);
     text-decoration: none;
-    color:  white;
+    color: #3a3a3a;
     font: 400 20px/1.8 "Lato", sans-serif;
     letter-spacing: 2px;
-     padding:12%;
+    /* padding: 12%;*/
     
 }
+.col-big{
+     -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  }
+  .about{
+     padding-left: 14%;
+  }
+
+  svg:hover {
+
+    fill: #fff !important;
+     transform: translateX(3px);
+  }
+
+/* Para moviles*/
+@media (max-width: 768px) {
+
+  .col-big{
+    flex: 0 0 100%;
+  }
+  .leftSpace{
+    width: 100%;
+    margin-left: 0%;
+  }
+  .rightSpace{
+    width: 0;
+  }
+  #leftSpacePhoto{
+    width: 100%;
+  }
+  .borderPhoto{
+    width: 80%;
+  }
+  #filterColor{
+    width: 80%;
+  }
+  .mailContainer{
+    width: auto;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+
+  .mailButton {
+    width: auto;
+    min-width: 30%;
+
+    max-width: initial;
+  }
+  .about{
+    padding-left: 0%;
+  }
+  .nav_bar_mobile{
+    display: block;
+    z-index: 200;
+  }
+  .nav_bar{
+    display: none;
+  }
+  .nav {
+    margin-top: 0;
+  }
+
+
+
+
+  .navImg {
+    width: 15%;
+    margin-left: 4%;
+    border: 2px solid #577d687a;
+    border-radius: 0px 0px 5px 5px;
+    border-top: none;
+    padding-top: 3%;
+  }
+  #home{
+    margin-top: 25%;
+    min-height: 600px;
+    padding-top: 100px;
+  }
+  #about{
+    padding-top: 60px;
+  }
+  #portfolio{
+    padding-top: 60px;
+  }
+   
+  #contact{
+    padding-top: 50px;
+    left: 3%;
+  }
+  .photo{
+    transform: translateX(10px);
+    transition: transform .5s;
+  }
+  .photo:hover{
+    transform: translateX(0px);
+  }
+}
+
+
+@media (min-width: 500px) {
+
+
+}
+
