--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,28 @@ img{
   max-width: 400px;
 }
 
+.menu-bar{
+  background-color: #333;
+  padding-left: 2%;
+  padding-right: 2%;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
+.btn-menu a{
+  color: #f2f2f2;
+  display: flex;
+  width: 100%;
+}
+.btn-menu:hover{
+  color: #fff;
+  background: #1a1a1a7c;
+  cursor: pointer;
+}
+.btn-menu-active, .btn-menu-active a{
+  color: rgb(19, 19, 19);
+  background: rgb(219, 221, 70);;
+}
 
 /* Colores */
 .colores{
@@ -110,6 +132,8 @@ img{
 }
 .portfolio-item-card-img-container img{
   margin: auto;
+  box-shadow: #666 1px 1px 9px 4px;
+  border-radius: 5px;
 }
 
 .portfolio-item-card-img-selector{
