--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
   color:#767474;
   color:#3a3a3a;
 /*   background-color:#f7f8fc; */
-  font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+ /* font-family: "San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;*/
+  font-family: monospace;
 }
 body{
   background-color: #f7f8fc;
@@ -51,7 +52,10 @@ img{
 }
 .btn-menu-active, .btn-menu-active a{
   color: rgb(19, 19, 19);
-  background: rgb(219, 221, 70);;
+  background: rgb(243 244 247);
+  border-radius: 3px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 /* Colores */
@@ -71,6 +75,13 @@ img{
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+
+  font-size: 50px;
+  background-image: linear-gradient(127deg, #9b9b9b 30%, #525252);
+  font-family: monospace;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+
 }
 .text-span-colored-green-2{/* Para resaltar un texto con color resaltado  */
   background-image: -webkit-gradient(linear, left top, right top, color-stop(58%, #3d31f7), to(#10dd3c));
@@ -82,14 +93,19 @@ img{
 
 .text-span-colored-blue{/* Para resaltar un texto con color resaltado  */
   background-image: -webkit-gradient(linear, left top, right top, color-stop(58%, #29bdff), to(#3d2dff));
-  background-image: linear-gradient(90deg, #29bdff 58%, #3d2dff);
+  
+  background-image: linear-gradient(183deg, #29ff9e 58%, #b8e5d4);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-family: monospace;
 }
 
 .leftSpace{
   padding-top: 9%;
+}
+.leftSpace h1,.leftSpace h1 span {
+   font-family: "San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
 }
 .rightSpace{
   padding-top: 18%;
@@ -137,7 +153,22 @@ img{
   margin: auto;
   box-shadow: #215478 1px 1px 9px 4px;
   border-radius: 5px;
+  transition: 0.5s;
+  opacity: 89%;
 }
+  .imgPreviewClass{
+    transition: 0.5s;
+    
+  /*  transition: src  2s linear 1s;*/
+    /*filter:opacity(100%);*/
+  }
+   .imgPreviewClass:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+    opacity: 100%;
+   }
+ 
+
 
 .portfolio-item-card-img-selector{
   width: 100%;
@@ -338,3 +369,65 @@ input[type=submit]:hover {
 
 }
 
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border-left-color: #075e85;
+    animation: spin 1s ease infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+
+ .modal-image-view{
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background: #00000052;
+    padding: 2em;
+    padding-top: 3em;
+    overflow: auto;
+    cursor: pointer;
+ }
+ .img-container{
+    margin: auto;
+    width: 80%;
+ }
+ .modal-img{
+    max-width: 100%;
+    border-radius: 5px;
+    box-shadow: 0px 0px 11px 0px #392a97;
+    border: 1px solid #4c4c4c;
+    position:relative;
+ }
+ .img-container:before {
+    content: "X";
+    display: block;
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    right: 1em;
+    top: 2em;
+    background-color: #f33;
+    border-radius: 5px;
+    color: #fff;
+    font-size: xx-large;
+    padding: 0.3em;
+    text-align: center;
+    font-family: sans-serif;
+ }
+ .img-container:before:hover{
+  cursor: pointer;
+ }
