--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,13 @@
   color:#767474;
   color:#3a3a3a;
 /*   background-color:#f7f8fc; */
-  font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+ /* font-family: "San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;*/
+  font-family: monospace;
 }
 body{
   background-color: #f7f8fc;
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(58%, #e7e7e7), to(#f7f8fc));
+  background-image: linear-gradient(71deg, #e7e7e7 7%, #f7f8fc);
   width: 98vw;
 }
 h1{
@@ -19,6 +22,7 @@ h1{
 }
 a{
   text-decoration: none !important;
+  border: none !important;
 }
 a:hover{
   color: #111111cf;
@@ -29,6 +33,37 @@ img{
   max-width: 400px;
 }
 
+.menu-bar{
+  background: #30457521;
+  padding-left: 2%;
+  padding-right: 2%;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
+.btn-menu{
+  border-bottom: 1px solid #000;
+    color: #333;
+}
+.btn-menu a{
+   color: #333;
+  display: flex;
+  width: 100%;
+}
+.btn-menu:hover{
+  color: #fff;
+  background: #1a1a1a7c;
+  cursor: pointer;
+}
+.btn-menu-active, .btn-menu-active a{
+  color: rgb(19, 19, 19);
+  background: rgb(243 244 247);
+  border-radius: 3px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border: 1px solid #000;
+  border-bottom: none;
+}
 
 /* Colores */
 .colores{
@@ -47,6 +82,13 @@ img{
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+
+  font-size: 50px;
+  background-image: linear-gradient(127deg, #9b9b9b 30%, #525252);
+  font-family: monospace;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+
 }
 .text-span-colored-green-2{/* Para resaltar un texto con color resaltado  */
   background-image: -webkit-gradient(linear, left top, right top, color-stop(58%, #3d31f7), to(#10dd3c));
@@ -58,14 +100,19 @@ img{
 
 .text-span-colored-blue{/* Para resaltar un texto con color resaltado  */
   background-image: -webkit-gradient(linear, left top, right top, color-stop(58%, #29bdff), to(#3d2dff));
-  background-image: linear-gradient(90deg, #29bdff 58%, #3d2dff);
+  
+  background-image: linear-gradient(183deg, #29ff9e 58%, #b8e5d4);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-family: monospace;
 }
 
 .leftSpace{
   padding-top: 9%;
+}
+.leftSpace h1,.leftSpace h1 span {
+   font-family: "San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
 }
 .rightSpace{
   padding-top: 18%;
@@ -96,7 +143,8 @@ img{
   min-height: 70vh;
   background-color: #f7f8fc;
   border: none;
-  box-shadow: #fff -5px -5px 5px 7px;
+  box-shadow: #fff -6px -4px 4px 5px;
+  
 }
 .portfolio-item-card-shadow{
   box-shadow: #a5a5a5 5px 5px 8px 7px;
@@ -110,11 +158,29 @@ img{
 }
 .portfolio-item-card-img-container img{
   margin: auto;
+  box-shadow: #215478 1px 1px 9px 4px;
+  border-radius: 5px;
+  transition: 0.5s;
+  opacity: 89%;
 }
+  .imgPreviewClass{
+    transition: 0.5s;
+    
+  /*  transition: src  2s linear 1s;*/
+    /*filter:opacity(100%);*/
+  }
+   .imgPreviewClass:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+    opacity: 100%;
+   }
+ 
+
 
 .portfolio-item-card-img-selector{
   width: 100%;
-  border: 1px solid #333;
+
+  border: 1px solid #e5e5e5;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   display: inline-flex;
@@ -257,54 +323,33 @@ input[type=submit]:hover {
      transform: translateX(3px);
   }
 
+  #photoMobile{
+    display: none;
+  }
+
 /* Para moviles*/
 @media (max-width: 768px) {
 
- 
-  #filterColor{
-    width: 80%;
+  body{
+    width: 100vw;
   }
-  .mailContainer{
-    width: auto;
-    margin-left: 0%;
-    margin-right: 0%;
-  }
-
-  .mailButton {
-    width: auto;
-    min-width: 30%;
-
-    max-width: initial;
-  }
-  .about{
-    padding-left: 0%;
-  }
-  .nav_bar_mobile{
-    display: block;
-    z-index: 200;
-  }
-  .nav_bar{
+  #photoReg{
     display: none;
   }
-  .nav {
-    margin-top: 0;
+  #photoMobile{
+    display: flex;
+ 
   }
 
 
-
-
-  .navImg {
-    width: 15%;
-    margin-left: 4%;
-    border: 2px solid #577d687a;
-    border-radius: 0px 0px 5px 5px;
-    border-top: none;
-    padding-top: 3%;
+  .portfolio-item-card-img-container img{
+    max-width: 80vw;
   }
+ 
   #home{
-    margin-top: 25%;
+    /* margin-top: 25%; */
     min-height: 600px;
-    padding-top: 100px;
+    padding-top: 34px;
   }
   #about{
     padding-top: 60px;
@@ -315,7 +360,6 @@ input[type=submit]:hover {
    
   #contact{
     padding-top: 50px;
-    left: 3%;
   }
   .photo{
     transform: translateX(10px);
@@ -332,3 +376,65 @@ input[type=submit]:hover {
 
 }
 
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border-left-color: #075e85;
+    animation: spin 1s ease infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+
+ .modal-image-view{
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background: #00000052;
+    padding: 2em;
+    padding-top: 3em;
+    overflow: auto;
+    cursor: pointer;
+ }
+ .img-container{
+    margin: auto;
+    width: 80%;
+ }
+ .modal-img{
+    max-width: 100%;
+    border-radius: 5px;
+    box-shadow: 0px 0px 11px 0px #392a97;
+    border: 1px solid #4c4c4c;
+    position:relative;
+ }
+ .img-container:before {
+    content: "X";
+    display: block;
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    right: 1em;
+    top: 2em;
+    background-color: #f33;
+    border-radius: 5px;
+    color: #fff;
+    font-size: xx-large;
+    padding: 0.3em;
+    text-align: center;
+    font-family: sans-serif;
+ }
+ .img-container:before:hover{
+  cursor: pointer;
+ }
